@@ -1,6 +1,8 @@
 buildscript {
     repositories {
-        jcenter()
+        mavenLocal()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath("net.serenity-bdd:serenity-gradle-plugin:2.4.24")
@@ -13,11 +15,11 @@ plugins {
     id 'uk.gov.hmcts.java' version '0.12.12'
     id 'pmd'
     id 'jacoco'
-    id 'org.springframework.boot' version '2.3.11.RELEASE'
+    id 'org.springframework.boot' version '2.6.2'
     id 'info.solidsoft.pitest' version '1.6.0'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
-    id 'com.github.ben-manes.versions' version '0.38.0'
+    id 'com.github.ben-manes.versions' version '0.40.0'
     id 'org.sonarqube' version '3.3'
 }
 
@@ -31,8 +33,8 @@ apply plugin: 'io.spring.dependency-management'
 def versions = [
         junit          : '5.5.0',
         lombok         : '1.18.6',
-        reformLogging  : '5.1.1',
-        reformS2sClient: '3.0.0',
+        reformLogging  : '5.1.7',
+        reformS2sClient: '4.0.2',
         serenity       : '2.1.0',
         gradlePitest   : '1.3.0',
         sonarPitest    : '0.5',
@@ -95,6 +97,14 @@ task integration(type: Test, description: 'Runs the integration tests.', group: 
     finalizedBy aggregate
 }
 check.dependsOn integration
+
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+    // The line below prevents the build from failing if the Fortify scan detects issues
+    ignoreExitValue = true
+}
 
 jacocoTestReport {
     executionData(test)
@@ -185,50 +195,57 @@ dependencyUpdates.resolutionStrategy = {
 
 repositories {
     mavenLocal()
-    jcenter()
     mavenCentral()
+    maven {
+        url 'https://jitpack.io'
+    }
     maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }
 }
 
 
 dependencies {
-    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-batch', version: '2.4.2')
+    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-batch', version: '2.6.2') {
+        exclude group: 'org.glassfish', module: 'jakarta.el'
+    }
     compile(group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: versions.springBoot)
-    compile(group: 'org.springframework', name: 'spring-beans', version: '5.3.7')
+    compile(group: 'org.springframework', name: 'spring-beans', version: '5.3.14')
     compile(group: 'org.springframework', name: 'spring-context', version: '5.3.7')
-    compile(group: 'org.springframework', name: 'spring-core', version: '5.3.7')
+    compile(group: 'org.springframework', name: 'spring-core', version: '5.3.14')
 
     compile group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
+
+    compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.reformS2sClient
+
+    compile(group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.1.1') {
+        exclude group: "org.apache.tomcat.embed", module: "tomcat-embed-websocket"
+        exclude group: "org.apache.tomcat.embed", module: "tomcat-embed-core"
+    }
 
     implementation group: 'org.springframework.security', name: 'spring-security-web', version: '5.6.2'
     implementation group: 'org.springframework.security', name: 'spring-security-config', version: '5.6.2'
     implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.6.2'
     implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.6.2'
-
-    implementation 'com.github.hmcts:properties-volume-spring-boot-starter:0.1.1'
     implementation group: 'org.springframework', name: 'spring-core', version: '5.3.15'
-
-    compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.reformS2sClient
-
-    compile(group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.1.0') {
-        exclude group: "org.apache.tomcat.embed", module: "tomcat-embed-websocket"
-        exclude group: "org.apache.tomcat.embed", module: "tomcat-embed-core"
-    }
+    implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: versions.reformS2sClient
+    implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging
+    implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: versions.reformLogging
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.14'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+    implementation 'com.github.hmcts:properties-volume-spring-boot-starter:0.1.1'
     implementation 'commons-io:commons-io:2.8.0'
-    implementation 'uk.gov.hmcts.reform:idam-client:v1.5.4'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.3.RELEASE'
+    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.0.16'
+    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.58'
 
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '2.2.3.RELEASE'
-    compile(group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.4') {
+
+    compile group: 'com.github.hmcts', name: 'idam-java-client', version: '2.0.1'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.0'
+    compile(group: 'com.github.hmcts', name: 'auth-checker-lib', version: '2.1.4') {
         // TODO remove when auth-checker-lib upgrades its dependency to spring boot 2.0.x
         exclude group: 'uk.gov.hmcts.reform', module: 'java-logging-spring'
     }
-
-    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.14'
-    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
     compile group: 'javax.inject', name: 'javax.inject', version: '1'
-    compile group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
-    compile group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk' , version: '5.4.0'
+    compile group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk' , version: '5.6.5'
 
 
     testCompile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
@@ -257,6 +274,7 @@ dependencies {
     testCompile group: 'io.rest-assured', name: 'rest-assured', version: versions.rest_assured
     testCompile group: 'io.github.openfeign', name: 'feign-jackson', version: versions.feign_jackson
     testCompile('com.opentable.components:otj-pg-embedded:0.13.3')
+    testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 
     compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
@@ -265,8 +283,7 @@ dependencies {
     integrationTestCompile group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
     integrationTestCompile group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
 
-    // AM-1447-Junit fix for GenericArrayUserTypeTest
-    implementation 'org.jetbrains:annotations:20.1.0'
+    implementation 'org.jetbrains:annotations:23.0.0'
 
     integrationTestCompile sourceSets.main.runtimeClasspath
     integrationTestCompile sourceSets.test.runtimeClasspath
@@ -292,6 +309,11 @@ dependencyManagement {
 test {
     useJUnitPlatform()
     failFast = true
+}
+
+configurations {
+    runtime.exclude group: 'org.apache.logging.log4j', module: 'log4j-api'
+    runtime.exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
 }
 
 bootJar {
